--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% load notifications_tags %}
 {% load q %}
+{% load notification_helpers %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
