--- a/templates/question.html
+++ b/templates/question.html
@@ -348,7 +348,7 @@ label:hover .onhover { display: inline; }
 
     </div> <!-- /question -->
 
-    {% include "discussion.html" %}
+    {% include "discussion/discussion.html" %}
 
   </div> <!-- /col -->
 
