--- a/templates/project.html
+++ b/templates/project.html
@@ -391,17 +391,11 @@ function invite_user_to_start_module(module_title, question_id) {
 }
 
 function open_tab_from_url_fragment() {
-  var tabpath = window.location.hash;
-  tabpath = tabpath.substring(tabpath.indexOf('/') + 1).split('?');
-  tabpath = tabpath.shift();
-  tabpath = parse_qs(tabpath).tab;
+  var tabpath = parse_qs(window.location.hash.substring(1)).tab;
   if (tabpath) {
     tabpath = tabpath.split('/');
     var tab = tabpath.shift();
-    if (tab === 'document-1') {
-      window.location.hash = '#/site-list';
-    }
-    else if (tab) {
+    if (tab) {
       $('#project-tabs a[href="#' + tab + '"]').tab("show");
     }
   }
