--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -113,7 +113,7 @@
         <div style="margin-top: 1em; text-align: right">
           {# <button type="submit" class="btn btn-default">Propose an Answer</button> #}
           {% if show_discussion_close_and_comment %}
-          <button id="discussion_close_and_comment" type="submit" class="btn btn-default" onclick="close_and_comment_clicked();">...</button>
+          <button id="discussion_close_and_comment" type="submit" class="btn btn-default" onclick="close_and_comment_clicked() && submit_comment();">...</button>
           {% endif %}
           <button type="submit" class="btn btn-primary">Comment</button>
         </div>
@@ -298,7 +298,7 @@ function display_discussion(discussion, is_page_load) {
 
   // render events
   $('#discussion .comment-thread').html('');
-  render_events(discussion);
+  render_events(discussion, true);
 
   // Autocomplete. The discussion object has a mapping from trigger
   // characters to autocomplete possibilities:
@@ -360,10 +360,10 @@ function update_close_and_comment_button_text() {
   )
 }
 
-function render_events(discussion) {
+function render_events(discussion, initial) {
   discussion.events.forEach(function(item) {
     if (item.type == "event")
-        render_event(item)
+        render_event(item, initial)
     else if (item.type == "comment")
         render_comment(item);
   });
@@ -501,7 +501,7 @@ function render_comment(item) {
   $('#page-comment-count').text(discussion_comment_count + " comments");
 }
 
-function render_event(item) {
+function render_event(item, initial) {
   var n = $('#event-template > div').clone();
   n.attr('data-sort-order', item.date_posix);
 
@@ -516,10 +516,13 @@ function render_event(item) {
   var c = $('#discussion .comment-thread')
   c.append(n);
 
-
   // Remember the last event we've seen, for polling.
   if (item.date_posix > discussion_info.max_event_time)
     discussion_info.max_event_time = item.date_posix;
+
+  // For integration with outer template-
+  if (!initial && window.on_discussion_event)
+    window.on_discussion_event(item);
 }
 
 function submit_comment() {
