bd10f049f10a37b097b8f264cad43ded8db09b35 broke the tab url fragment behavior

--- a/templates/project.html
+++ b/templates/project.html
@@ -391,23 +391,24 @@ function invite_user_to_start_module(module_title, question_id) {
 }
 
 function open_tab_from_url_fragment() {
-  var tabpath = window.location.hash;
+  var tabpath = window.location.hash.substring(1); // chop off the "#"
+
   // The GovReady Dashboard React app appends a random code like `?_k=h9zm95` to the
   // hashbang, so we need to strip that out.
-  tabpath = tabpath.substring(tabpath.indexOf('/') + 1).split('?');
-  tabpath = tabpath.shift();
+  tabpath = tabpath.split('?').shift();
+
+  // Open the tab specified in the fragment.
   tabpath = parse_qs(tabpath).tab;
   if (tabpath) {
     tabpath = tabpath.split('/');
     var tab = tabpath.shift();
-    // If the GovReady Dashboard tab is clicked, we need to change the hashbang.
-    if (tab === 'document-1') {
-      window.location.hash = '#/site-list';
-    }
-    // Otherwise, show the appropriate tab.
-    else if (tab) {
+    if (tab)
       $('#project-tabs a[href="#' + tab + '"]').tab("show");
-    }
+
+    // If the GovReady Dashboard tab is clicked, we need to change the hashbang
+    // so that the React app works.
+    if (tab === 'document-1')
+      window.location.hash = '#/site-list';
   }
 }
 
