--- a/templates/base.html
+++ b/templates/base.html
@@ -280,6 +280,7 @@
         <script src="{% static "vendor/autosize.min.js" %}"> </script>
         <script src="{% static "vendor/jquery.textcomplete.min.js" %}"> </script>
 
+        <script src="{% static "js/discussion.js" %}"></script>
         <script src="{% static "js/main.js" %}"></script>
         <script src="{% static "vendor/bootstrap-helpers.js" %}"></script>
         <script>
