--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -10,6 +10,15 @@
   font-size: 85%;
   color: #555;
 }
+  #discussion-your-comment-tips a {
+    color: inherit;
+  }
+    #discussion-your-comment-tips a span {
+      margin-right: .5em;
+    }
+  #discussion-your-comment-tips a:hover {
+    text-decoration: none;
+  }
   #discussion-your-comment-tips label {
     color: #44A;
     cursor: pointer;
@@ -123,12 +132,13 @@
         </label>
         <textarea id="discussion-your-comment" class="form-control" rows="3" placeholder="Enter your message here."></textarea>
         <div id="discussion-your-comment-tips">
+          <a href="http://commonmark.org/help/" target="_blank">
+            <span><b>**bold**</b></span> <span><i>*italic*</i></span> <span>* list</span> <span>[link](http://to)</span> <span># heading.</span>
+          </a>
           Attach files by <label for="discussion-attach-file">selecting them</label>.
-
          <div style="display: none">
             <input name="value" type="file" id="discussion-attach-file" multiple onchange="attach_files(this.files)" />
          </div>
-
         </div>
         <div style="margin-top: 1em; text-align: right">
           {# <button type="submit" class="btn btn-default">Propose an Answer</button> #}
