7b5dd800f5f58d387de199b9e2637d1943711ec8 broke link from module-finished back to the project (& tab) the user came from
I deleted a method that was in use in a template. Fixing it by revising the template.

--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -54,7 +54,7 @@ thead {
 <div style="margin: 2em 0">
   {% with supermodule=task.is_answer_to_unique %}
     {% if supermodule and supermodule.task.editor == request.user %}
-      {% if supermodule.task == supermodule.project.root_task %}
+      {% if supermodule.task == supermodule.task.project.root_task %}
         {# return to project #}
         <p><a href="{{task.project.get_absolute_url}}#tab={{supermodule.question.spec.tab|slugify}}/{{supermodule.question.spec.group|slugify}}/{{supermodule.question.key|slugify}}/{{task.id}}" class="btn btn-success">
           Continue with other modules in {{task.project.title}} &raquo;
