serve emojione as static assets rather than via a CDN
fixes #209

--- a/discussion/templates/discussion/discussion.html
+++ b/discussion/templates/discussion/discussion.html
@@ -1,6 +1,6 @@
 {% load static %}
-<script src="https://cdn.jsdelivr.net/emojione/2.1.4/lib/js/emojione.min.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/emojione/2.1.4/assets/css/emojione.min.css"/>
+<script src="{% static "vendor/emojione.min.js" %}"></script>
+<link rel="stylesheet" href="{% static "vendor/emojione.min.css" %}"/>
 
 <script src="{% static "vendor/push.js" %}"> </script>
 
