serve google web fonts as static assets rather than using the google CDN

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,8 @@
         {% endcomment %}
 
         <link rel="stylesheet" href="{% static "vendor/bootstrap/css/bootstrap.min.css" %}">
+        <link rel="stylesheet" href="{% static "vendor/google-fonts.css" %}">
         <style>
-            @import url(https://fonts.googleapis.com/css?family=Hind:400,700);
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
