change 'Reset' => 'Mark as Unanswered' and hide this button in production because I find it valuable for testing but am not sure it has a purpose for users that makes sense here

--- a/templates/question.html
+++ b/templates/question.html
@@ -324,11 +324,11 @@ label:hover .onhover { display: inline; }
               &raquo;
             </button>
 
-            {% if answer_obj %}
+            {% if answer_obj and DEBUG %}
               <button id="clear-button"
-                type="submit" class="btn btn-danger"
+                type="submit" class="btn btn-default"
                 onclick="$('#question > form input[name=method]').val('clear')">
-                  Reset
+                  Mark as Unanswered
                   &raquo;
                 </button>
             {% endif %}
